2006-07-22    <tino@firebird.03.softkill.net>

	* dbm.c (data_free, db_get): added
	(c_dump, c_alter, c_delete, c_get, hunt, c_filter): replaced
	gdbm_fetch() by db_get() to resolve memory leak.
	(db_next): changed to resolve another memory leak.
	(db_data): marked that data is allocated to resolve possibly
	memory leak (cannot happen, but be sure).
	(read_data_term_s): just a fix for a possible memory leak (there
	shall be none in this case).
	(dobget, c_bget, c_bget0): added
	(main): usage updated

2006-06-11    <tino@firebird.03.softkill.net>

	* dbm.c (main): added return values of dbm
	(ex): other return values added
	(db_open): timeout now gives the old return while errors return
	general error

2006-06-06    <tino@firebird.03.softkill.net>

	* dbm.c (c_delete): added delete of key only if data matches
	(db_open, main): timeout added
	(c_alter): added
	(batcher_new, c_nbatch, c_nbatch0): added
	(main): usage corrected, batch does not ignore
	(db_open): corrected the timeout function.  Shall recover as quick
	as possible from the stale situation.

2006-06-04    <tino@firebird.03.softkill.net>

	* Makefile.tino (ADD_LDFLAGS): common problem resolved: I always
	add libraries to LDFLAGS instead of LDLIBS which sometimes gives
	link problems on some platforms.

	* dbm.c (c_filter): fixed the filter code.  It now shall really
	work in all circumstances as expected.  From 0.4.1 to 0.4.2 I only
	fixed the kmp=1xx case.  Now it works for kmp=0xx as expected, too
	(this is if data key does not exist don't filter and if key exists
	it must match as given).  If data is not present (4th arg not
	present in contrast to empty) only the 'k' in 'kmpt' counts and mp
	is ignored (as there you don't want to match against data).

2006-03-28    <tino@firebird.03.softkill.net>

	* dbm.c (dumpline): dump did not work correctly on args with zero
	length.

2004-12-13    <tino@firebird.03.softkill.net>

	* dbm.c (hunt): some changes migth correct errors (never checked).