@@ -1,3 +1,12 @@
+2006-08-10    <tino@firebird.03.softkill.net>
+
+	* dbm.c (batch_alter, c_balter, c_balter0): added
+	(c_nbatch0, c_nbatch, main): changed for balter[0].
+	(db_replace, db_cmp): added as convenience routine
+
+	* dbm.c (c_alter): bug fixed, 3rd argument was read double (so
+	stdin was read double if third argument was not present).
+
 2006-07-22    <tino@firebird.03.softkill.net>
 
 	* dbm.c (data_free, db_get): added
